--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<title>Обед длиной в 100 лет</title>
-	<meta name="theme-color" content="#EF33A2">
-	<meta property="og:title" content="Обед длиной в 100 лет" />
-	<meta property="og:description" content="Узнайте о главных гастрономических трендах от 20-х годов до наших дней" />
+	<title>Моя собака - мой тренер</title>
+	<meta name="theme-color" content="#EB008B">
+	<meta property="og:title" content="Моя собака - мой тренер"/>
+	<meta property="og:description" content="Программа тренировок, которая подойдет вашей собаке и лично вам." />
 	<meta property="og:image" content="http://100letbd.afisha.ru/static/share.jpg" />
-	<meta property="og:site_name" content="Обед длиной в 100 лет"/>
+	<meta property="og:site_name" content="Моя собака - мой тренер"/>
 	<link rel="shortcut icon" href="http://100letbd.afisha.ru/static/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="http://100letbd.afisha.ru/static/favicon.ico" type="image/x-icon">
 </head>
