--- a/index.html
+++ b/index.html
@@ -6,103 +6,50 @@
 	<title>Моя собака - мой тренер</title>
 	<meta name="theme-color" content="#EB008B">
 	<meta property="og:title" content="Моя собака - мой тренер"/>
-	<meta property="og:description" content="Программа тренировок, которая подойдет вашей собаке и лично вам." />
-	<meta property="og:image" content="http://100letbd.afisha.ru/static/share.jpg" />
+	<meta property="og:description" content="Как превратить прогулку с собакой в увлекательную тренировку"/>
+	<meta property="og:image" content="/static/share.jpg" />
 	<meta property="og:site_name" content="Моя собака - мой тренер"/>
-	<link rel="shortcut icon" href="http://100letbd.afisha.ru/static/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="http://100letbd.afisha.ru/static/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/static/favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<div id="app"></div>
 
-	<script type="text/javascript">
-		(function(d, w, c) {
-			(w[c] = w[c] || []).push(function() {
+	<script async="" src="https://www.google-analytics.com/analytics.js"></script>
+	<script type="text/javascript" async="" src="https://mc.yandex.ru/metrika/watch.js"></script>
+	<script type="text/javascript">(function (d, w, c) {
+			(w[c] = w[c] || []).push(function () {
 				try {
-					w.yaCounter42833959 = new Ya.Metrika({
-						id: 42833959,
+					w.yaCounter41254644 = new Ya.Metrika({
+						id: 41254644,
 						clickmap: true,
 						trackLinks: true,
 						accurateTrackBounce: true,
 						webvisor: true
 					});
-				} catch (e) {}
+				} catch (e) { }
 			});
-
 			var n = d.getElementsByTagName("script")[0],
 				s = d.createElement("script"),
-				f = function() {
-					n.parentNode.insertBefore(s, n);
-				};
+				f = function () { n.parentNode.insertBefore(s, n); };
 			s.type = "text/javascript";
 			s.async = true;
 			s.src = "https://mc.yandex.ru/metrika/watch.js";
-
 			if (w.opera == "[object Opera]") {
 				d.addEventListener("DOMContentLoaded", f, false);
-			} else {
-				f();
-			}
-		})(document, window, "yandex_metrika_callbacks");
-	</script>
-	<noscript>
-		<div>
-			<img src="https://mc.yandex.ru/watch/42833959" style="position:absolute; left:-9999px;" alt="" />
-		</div>
-	</noscript>
-	<!-- /Yandex.Metrika counter -->
-
-	<script>
-		(function(i, s, o, g, r, a, m) {
-			i['GoogleAnalyticsObject'] = r;
-			i[r] = i[r] || function() {
-				(i[r].q = i[r].q || []).push(arguments)
-			}, i[r].l = 1 * new Date();
-			a = s.createElement(o),
-				m = s.getElementsByTagName(o)[0];
-			a.async = 1;
-			a.src = g;
-			m.parentNode.insertBefore(a, m)
+			} else { f(); }
+		})(document, window, "yandex_metrika_callbacks");</script>
+	<noscript>&lt;div&gt;&lt;img src=https://mc.yandex.ru/watch/41254644 style="position:absolute; left:-9999px" alt=""&gt;&lt;/div&gt;</noscript>
+	
+	<script>(function (i, s, o, g, r, a, m) {
+		i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+			(i[r].q = i[r].q || []).push(arguments)
+		}, i[r].l = 1 * new Date(); a = s.createElement(o),
+			m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
 		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-		ga('create', 'UA-88014128-19', 'auto');
+		ga('create', 'UA-88014128-22', 'auto');
 		ga('send', 'pageview');
 	</script>
-
-	<!-- Yandex.Metrika counter -->
-	<script type="text/javascript">
-		(function(d, w, c) {
-			(w[c] = w[c] || []).push(function() {
-				try {
-					w.yaCounter47923898 = new Ya.Metrika({
-						id: 47923898,
-						clickmap: true,
-						trackLinks: true,
-						accurateTrackBounce: true,
-						webvisor: true,
-						trackHash: true,
-						ecommerce: "dataLayer"
-					});
-				} catch (e) {}
-			});
-
-			var n = d.getElementsByTagName("script")[0],
-				s = d.createElement("script"),
-				f = function() {
-					n.parentNode.insertBefore(s, n);
-				};
-			s.type = "text/javascript";
-			s.async = true;
-			s.src = "https://mc.yandex.ru/metrika/watch.js";
-
-			if (w.opera == "[object Opera]") {
-				d.addEventListener("DOMContentLoaded", f, false);
-			} else {
-				f();
-			}
-		})(document, window, "yandex_metrika_callbacks");
-	</script>
-	<noscript><div><img src="https://mc.yandex.ru/watch/47923898" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-	<!-- /Yandex.Metrika counter -->
 
 </body>
 </html>
