--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Моя собака - мой тренер</title>
 	<meta name="theme-color" content="#EB008B">
 	<meta property="og:title" content="Моя собака - мой тренер"/>
-	<meta property="og:description" content="Как превратить прогулку с собакой в увлекательную тренировку"/>
+	<meta property="og:description" content="Как превратить прогулку с собакой в увлекательную тренеровку"/>
 	<meta property="og:image" content="/static/share.jpg" />
 	<meta property="og:site_name" content="Моя собака - мой тренер"/>
 	<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
@@ -40,7 +40,7 @@
 			} else { f(); }
 		})(document, window, "yandex_metrika_callbacks");</script>
 	<noscript>&lt;div&gt;&lt;img src=https://mc.yandex.ru/watch/41254644 style="position:absolute; left:-9999px" alt=""&gt;&lt;/div&gt;</noscript>
-	
+
 	<script>(function (i, s, o, g, r, a, m) {
 		i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
 			(i[r].q = i[r].q || []).push(arguments)
