--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<meta name="theme-color" content="#EB008B">
 	<meta property="og:title" content="Моя собака - мой тренер"/>
 	<meta property="og:description" content="Как превратить прогулку с собакой в увлекательную тренеровку"/>
-	<meta property="og:image" content="/static/share.jpg" />
+	<meta property="og:image" content="https://coach.afisha.ru/static/share.jpg" />
 	<meta property="og:site_name" content="Моя собака - мой тренер"/>
-	<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="/static/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="https://coach.afisha.ru/static/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="https://coach.afisha.ru/static/favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<div id="app"></div>
